# test_technique

./: .coverage  .dockerignore  .env.example  .gitignore  CHOIX_TECHNIQUES.md  Dockerfile  ETAT_DE_LART.md  README.md  create_user.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  secrets.example.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: __init__.py  audit_log.py  auth.py  citation_verifier.py  db.py  documents.py  files.py  ingest.py  logging_config.py  mime_validation.py  multi_query.py  rag.py  rag_core.py  rag_runtime.py  rate_limit.py  reranker.py  security.py  settings.py
data/: app.sqlite
pages/: 1_chat.py  2_documents.py
scripts/: benchmark.py
tests/: test_audit_log.py  test_auth.py  test_citation_verifier.py  test_db.py  test_deletion.py  test_files.py  test_ingest.py  test_mime_validation.py  test_multi_query.py  test_rag_core.py  test_rate_limit.py  test_reranker.py  test_security.py
